--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
         <!-- cards -->
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-6 d-flex ">
 
-            <div OnClick="location.href ='file:///C:/Users/qkrxo/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/TIL/web/PJT/05_movie.html'"
-                style="cursor:pointer;">
+            <div OnClick="location.href ='./05_movie.html'" style="cursor:pointer;">
                 <div class="col d-flex justify-content-center my-3">
                     <div class="card px-0 " style="width: 300px;">
                         <img src="./movie1.jpg" class="section-img" alt="...">
