--- a/05_movie.html
+++ b/05_movie.html
@@ -233,8 +233,10 @@
             <hr>
         </div>
     </div>
-    <!-- footer -->
-    <div class="text-center">1-14 web pj</div>
+    <!-- 최하단 -->
+    <footer class="text-center">
+        <p class="pt-5 ">1-14 web pj</p>
+    </footer>
     <!-- AWS icon kit -->
     <script src="https://kit.fontawesome.com/a53c22d0be.js" crossorigin="anonymous"></script>
     <!-- JavaScript Bundle with Popper -->
