--- a/web_pjt.html
+++ b/web_pjt.html
@@ -79,7 +79,10 @@
         </div>
     </div>
     <!-- footer -->
-    <div class="text-center">1-14 web pj</div>
+    <!-- 최하단 -->
+    <footer class="text-center">
+        <p class="pt-5 ">1-14 web pj</p>
+    </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
