--- a/03_community.html
+++ b/03_community.html
@@ -199,20 +199,26 @@
 
 
             </div>
+            <!-- 작성 -->
+            <div class="text-end">
+                <a class="btn btn-primary me-2" href="./04_form.html" role="button">작성하기</a>
+            </div>
             <!-- 페이지 -->
             <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-center">
+                <ul class="pagination justify-content-center mb-0">
                     <li class="page-item"><a class="page-link" href="#">Previous</a></li>
                     <li class="page-item"><a class="page-link" href="#">1</a></li>
                     <li class="page-item"><a class="page-link" href="#">2</a></li>
                     <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                    <li class="page-item "><a class="page-link" href="#">Next</a></li>
                 </ul>
             </nav>
 
     </section>
     <!-- 최하단 -->
-    <div class="text-center">1-14 web pj</div>
+    <footer class="text-center">
+        <p class="pt-5 ">1-14 web pj</p>
+    </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
