--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
 
 
     </section>
-    <div class="text-center py-3">1-14 web pj</div>
+    <!-- 최하단 -->
+    <footer class="text-center">
+        <p class="pt-5 ">1-14 web pj</p>
+    </footer>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
